@@ -60,6 +60,7 @@ Interface changes
 ### New parameters with default values
 
 - calculate_basis_for_dual = 1: Should the basis be calculated if dual postsolve is possible (1: yes 0: no)
+- validation_after_every_postsolving_step = 0: Should the primal/dual solution be validated during after every postsolving step? (1:yes 0: no)
 - presolve.sequentialreductionapplying = 1: If only one thread is used, should the results be applied immediately after the presolver returned the reductions? (1: yes 0: no)
 - coefftightening.parallel = 1: Should the presolver be run in parallel internally (1: yes 0: no)
 - doubletoneq.parallel = 0: Should the presolver be run in parallel internally (1: yes 0: no)
